[package]
name = "cupcake"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
html_parser = "0.7"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rust_socketio = { version = "0.6", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.1"
tokio = { version = "1.48", features = ["full"] }
url = "2.5"

[dev-dependencies]
test-case = "3.3"
